<resources>
    <string name="app_name">composition of the number</string>

    <string name="start_name">Состав Числа</string>
    <string name="game_type">Тип игры</string>
    <string name="diff_mode">Уровень сложности</string>
    <string name="start_game_button">Начать Игру</string>
    <string name="stats_button">Статистика</string>
    <string name="summ_game_type_button">Сложение</string>
    <string name="substraction_game_type_button">Вычитание</string>
    <string name="multiply_game_type_button">Умножение</string>
    <string name="division_game_type_button">Деление</string>
    <string name="easy_game_type_button">Легкий</string>
    <string name="medium_game_type_button">Средний</string>
    <string name="hard_game_type_button">Продвинутый</string>
    <string name="question_mark">\?</string>
    <string name="progress">Прогресс</string>
    <string name="restart">Заново</string>
    <string name="stats">Статистика</string>
    <string name="choose_level">Выбор уровня</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="current_score">Ваш счет: %s</string>
</resources>