<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/numbers_falling"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/numbers_falling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_for_text"
        android:layout_width="@dimen/pic_width"
        android:layout_height="@dimen/pic_height"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="150dp"
        android:background="@color/main_color"
        android:src="@drawable/back_for_text"
        app:layout_constraintBottom_toBottomOf="@+id/game_type_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_type_title" />

    <TextView
        android:id="@+id/game_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/game_type"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/summ_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_type_title"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/dark_beige_button"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_type_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/summ_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/dark_beige_text_color"

            android:textSize="@dimen/text_size">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/substraction_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/light_beige_button"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summ_game_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/substraction_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/multiply_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/dark_beige_button"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/substraction_game_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/multiply_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/dark_beige_text_color"
            android:textSize="@dimen/text_size">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/division_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/light_beige_button"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply_game_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/division_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>