<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/numbers_falling"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/numbers_falling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_for_level_difficulty"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/container_difficulty"
        app:layout_constraintBottom_toBottomOf="@+id/diff_mode_title"
        app:layout_constraintEnd_toEndOf="@+id/diff_mode_title"
        app:layout_constraintStart_toStartOf="@+id/diff_mode_title"
        app:layout_constraintTop_toTopOf="@+id/diff_mode_title" />


    <TextView
        android:id="@+id/diff_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="400dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/diff_mode"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/easy_game_type_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/easy_game_mode"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diff_mode_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/easy_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/medium_game_type_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/medium_game_mode"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_game_type_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/medium_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hard_game_type_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/hard_game_mode"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medium_game_type_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hard_game_type_button"
            android:textAlignment="center"
            android:textColor="@color/hard_game_mode_COLOR"
            android:textSize="@dimen/text_size">

        </TextView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>