<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/numbers_falling"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/numbers_falling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_for_text"
        android:layout_width="@dimen/pic_width"
        android:layout_height="@dimen/pic_height"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="150dp"
        android:background="@color/main_color"
        android:src="@drawable/back_for_text"
        app:layout_constraintBottom_toBottomOf="@+id/main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_text" />

    <ImageView
        android:id="@+id/back_for_start_frame"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/container_start_frame"
        app:layout_constraintBottom_toBottomOf="@+id/main_text"
        app:layout_constraintEnd_toEndOf="@+id/main_text"
        app:layout_constraintStart_toStartOf="@+id/main_text"
        app:layout_constraintTop_toTopOf="@+id/main_text" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/start_name"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="140dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/light_beige_button"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="24dp"
            android:paddingStart="16dp"
            android:text="@string/start_game_button"
            android:textColor="@color/text_color">

        </TextView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/stats_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/dark_beige_button"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="24dp"
            android:paddingStart="16dp"
            android:text="@string/stats_button"
            android:textColor="@color/dark_beige_text_color">

        </TextView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>